# haskell-tictactoe

./: HLint.hs  README.md  haskell-tictactoe.cabal  package.yaml  run-ghcid.sh  stack.yaml  stylish-haskell.yml  tictactoe.cabal
app/: Main.hs
src/: AppPrelude.hs  Prelude.hs  TicTacToe.hs
src/TicTacToe/: AI.hs  Actions.hs  Board.hs  Coordinate.hs  Game.hs  GameLogic.hs  Line.hs  Player.hs  Rendering.hs  Result.hs  State.hs  TerminalGame.hs  UI.hs
src/TicTacToe/AI/: DNA.hs  Executor.hs  Generator.hs  ParseTree.hs
test/: AppPreludeSpec.hs  PreludeSpec.hs
test/TicTacToe/: AISpec.hs  ActionsSpec.hs  BoardSpec.hs  CoordinateSpec.hs  Fixtures.hs  GameLogicSpec.hs  GameSpec.hs  LineSpec.hs  PlayerSpec.hs  RenderingSpec.hs  ResultSpec.hs  StateSpec.hs  TestGame.hs
test/TicTacToe/AI/: DNASpec.hs  ExecutorSpec.hs  GeneratorSpec.hs
