name:             tictactoe
version:          0.0.0
license:          MIT
license-file:     LICENSE
copyright:        (c) 2015 Tom Oram
author:           Tom Oram <tom@x2k.co.uk>
maintainer:       Tom Oram <tom@x2k.co.uk>
build-type:       Simple
cabal-version:    >= 1.8

library
  ghc-options:
      -Wall
  hs-source-dirs:
      src
  exposed-modules:
    TicTacToe.Board
  build-depends:
      base    == 4.*

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  hs-source-dirs:
      test
  main-is:
      Spec.hs
  build-depends:
      base    == 4.*
    , tictactoe
    , hspec   == 2.*
